testsuite/tests/parser/should_fail/pfail017.alan
hello() : proc
  foo  : int[100];
  foo2 : byte
{
}
