testsuite/tests/parser/should_fail/pfail017.stderr
pfail017.alan:4:1: Error: Parse error on input `{'
	Probably missing `;'

